Redirect works, but takes 4 secs. and new tab shows an error message
